<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/CardContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/torrent_detail_overview_expander"
        style="@style/CardHeaderExpander" >

        <TextView
            style="@style/CardHeaderExpanderText"
            android:text="@string/torrent_overview" />

        <View
            android:id="@+id/torrent_detail_overview_expander_image"
            style="@style/CardHeaderExpanderImageCollapse" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/torrent_detail_overview_content"
        style="@style/CardContent" >
        
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            
	        <TextView
	            style="@style/CardHeading"
	            android:layout_span="2"
	            android:text="@string/torrent_activity" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView style="@style/CardTextColumn" android:text="@string/torrent_have" />

            <TextView android:id="@+id/torrent_have" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView style="@style/CardTextColumn" android:text="@string/torrent_downloaded" />

            <TextView android:id="@+id/torrent_downloaded" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView style="@style/CardTextColumn" android:text="@string/torrent_uploaded" />

            <TextView android:id="@+id/torrent_uploaded" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView style="@style/CardTextColumn" android:text="@string/torrent_state" />

            <TextView android:id="@+id/torrent_state" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView style="@style/CardTextColumn" android:text="@string/torrent_running_time" />

            <TextView android:id="@+id/torrent_running_time" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView style="@style/CardTextColumn" android:text="@string/torrent_remaining_time" />

            <TextView android:id="@+id/torrent_remaining_time" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView style="@style/CardTextColumn" android:text="@string/torrent_last_activity" />

            <TextView android:id="@+id/torrent_last_activity" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView style="@style/CardTextColumn" android:text="@string/torrent_error" />

            <TextView android:id="@+id/torrent_error"
                    android:textColor="@drawable/torrent_detail_error_color"/>
        </TableRow>                                                                                                    
        
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

	        <TextView
	            style="@style/CardHeading"
	            android:layout_span="2"
	            android:text="@string/torrent_details" />
	        
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView style="@style/CardTextColumn" android:text="@string/torrent_size" />

            <TextView android:id="@+id/torrent_size" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView style="@style/CardTextColumn" android:text="@string/torrent_location" />

            <TextView android:id="@+id/torrent_location" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView style="@style/CardTextColumn" android:text="@string/torrent_hash" />

            <TextView android:id="@+id/torrent_hash" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView style="@style/CardTextColumn" android:text="@string/torrent_privacy" />

            <TextView android:id="@+id/torrent_privacy" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView style="@style/CardTextColumn" android:text="@string/torrent_origin" />

            <TextView android:id="@+id/torrent_origin" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView style="@style/CardTextColumn" android:text="@string/torrent_comment" />

            <TextView
                android:id="@+id/torrent_comment"
                android:autoLink="all"/>
        </TableRow>

    </TableLayout>
</LinearLayout>
