<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_menu_refresh"
        android:visible="true"
        android:showAsAction="ifRoom"
        android:orderInCategory="1"
        android:title="@string/refresh"
        android:titleCondensed="@string/refresh"/>
    
    <item android:id="@+id/menu_alt_speed"
        android:icon="@drawable/ic_menu_alt_speed_off"
        android:visible="true"
        android:showAsAction="ifRoom"
        android:orderInCategory="3"
        android:title="@string/alt_speed_label_on"
        android:titleCondensed="@string/alt_speed"/>

    <item android:id="@+id/menu_settings"
        android:visible="true"
        android:showAsAction="never"
        android:orderInCategory="3"
        android:title="@string/settings"
        android:titleCondensed="@string/settings" />
</menu>